--- a/src/assets/sass/_inputs.scss
+++ b/src/assets/sass/_inputs.scss
@@ -78,6 +78,10 @@
 		}
 	}
 
+	.message {
+		font-size: 12px;
+		color: crimson;
+	}
 	@media screen and(min-width: $laptop){
 		width: 540px;
 		&.m-2{
