--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -9,7 +9,7 @@ body {
     color: $text-gray-dark;
     background-color: $bg-gray;
     font-size: 14px;
-    font-family: 'SF Pro Text', 'Courier New', Courier, monospace;
+    font-family: 'Muli', sans-serif;
 }
 
 #root {
@@ -31,7 +31,7 @@ a {
 }
 
 h1,h2,h3,h4,h5,h6 {
-    font-family: "SF Pro Display", 'Courier New', Courier, monospace;
+    font-family: 'Muli', sans-serif;
     color: $text-gray-dark;
 }
 h1 {
