--- a/src/assets/sass/_fonts.scss
+++ b/src/assets/sass/_fonts.scss
@@ -1,9 +1,11 @@
-@font-face {
-    font-family: 'SF Pro Display';
-    src: url('../fonts/SF-Pro-Display-Regular.otf') format('opentype');
-}
+// @font-face {
+//     font-family: 'SF Pro Display';
+//     src: url('../fonts/SF-Pro-Display-Regular.otf') format('opentype');
+// }
 
-@font-face {
-    font-family: 'SF Pro Text';
-    src: url('../fonts/SF-Pro-Text-Regular.otf') format('opentype');
-}
+// @font-face {
+//     font-family: 'SF Pro Text';
+//     src: url('../fonts/SF-Pro-Text-Regular.otf') format('opentype');
+// }
+
+@import url('https://fonts.googleapis.com/css?family=Muli');
